add Firebase
